# dispatch

./: Cargo.toml  EXAMPLE.md  README.md  build.rs  deny.toml
.github/workflows/: ci.yml  lint.yml  release.yml
src/: avahi.rs  github.rs  main.rs
src/http/: server.rs  service.rs
src/tui/: mod.rs
