[package]
name = "dispatch"
version = "1.1.0"
edition = "2021"
authors = ["Advanced Micro Devices, Inc."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AMDEPYC/dispatch"
description = "Tool for dispatching EFI jobs from GitHub over HTTP boot"

[dependencies]
tokio = { version = "1.47", default-features = false, features = ["macros", "rt-multi-thread", "sync", "net", "io-std"] }
clap = { version = "4.5", default-features = false, features = ["derive", "env", "std", "help", "usage"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
crossterm = { version = "0.29", default-features = false, features = ["event-stream"] }
hyper = { version = "1.8", default-features = false, features = ["http1", "server"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
zbus = { version = "5.11", default-features = false, features = ["tokio"] }
http-body-util = { version = "0.1", default-features = false }
serde_json = { version = "1.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }

[build-dependencies]
uefi-reset = { version = "1.0", artifact = "bin", target = "x86_64-unknown-uefi" }

[profile.release]
codegen-units = 1
incremental = false
opt-level = 3
strip = true
debug = 0
lto = true
